force-app/main/default/objects/Global_Setting__mdt/Global_Setting__mdt.object-meta.xml
<CustomObject>
    <description>GlobalSettings</description>
    <label>Global Setting</label>
    <pluralLabel>Global Settings</pluralLabel>
</CustomObject>