force-app/main/default/objects/Global_Setting__mdt/fields/AUTH_API_URL__c.field-meta.xml
<CustomField>
    <fullName>AUTH_API_URL__c</fullName>
    <description>URL API AUTH</description>
    <label>AUTH_API_URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>