force-app/main/default/objects/Global_Setting__mdt/fields/DEFAULT_CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT_CLIENT_ID__c</fullName>
    <description>Assigned Client ID for new accounts created from Community Self Register page.</description>
    <label>DEFAULT_CLIENT_ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>