force-app/main/default/objects/Global_Setting__mdt/fields/PROPELUS_API_URL__c.field-meta.xml
<CustomField>
    <fullName>PROPELUS_API_URL__c</fullName>
    <description>Propelus URL</description>
    <label>PROPELUS_API_URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>